--- a/public/html/dashboard.ejs
+++ b/public/html/dashboard.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" style="background-color: rgba(0,0,0,0.0); width:100%; height:100%;">
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -18,24 +19,61 @@
     <link media="all" rel="stylesheet"
         href="https://s3.eu-west-1.amazonaws.com/cdn.growtopiagame.com/website/resources/assets/css/ingame-custom.css" />
     <style>
-        .modal-backdrop { background-color: rgba(0,0,0,0.1); }
-        .modal-backdrop+div { overflow: auto; }
-        .modal-body, .content { padding: 0; }
-        .section-title h2 { color: #fff; text-shadow: 0 6px 2px rgba(0,0,0,1); }
-        #or { text-decoration: none !important; color: #fff; font-weight: bold; margin: 10px 0; display: block; text-shadow: 0 2px 2px rgba(0,0,0,0.8); }
-        #loginButton { display: inline-block; margin: 0 auto; }
-        .modal-body { text-align: center; }
+        .modal-backdrop {
+            background-color: rgba(0, 0, 0, 0.1);
+        }
+
+        .modal-backdrop+div {
+            overflow: auto;
+        }
+
+        .modal-body,
+        .content {
+            padding: 0;
+        }
+
+        .section-title h2 {
+            color: #fff;
+            text-shadow: 0 6px 2px rgba(0, 0, 0, 1);
+        }
+
+        #loginButton {
+            display: inline-block;
+            margin: 0 auto;
+        }
+
+        .modal-body {
+            text-align: center;
+        }
+
+        #or {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: #fff;
+            font-weight: bold;
+            margin: 15px 0;
+        }
+
+        #or::before,
+        #or::after {
+            content: "";
+            flex: 1;
+            border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+            margin: 0 10px;
+        }
     </style>
 </head>
 
 <body style="background-color: rgba(0,0,0,0.0);">
-    <button type="button" class="btn btn-primary hidden" data-toggle="modal" id="modalButton"
-        data-target="#modalShow" data-backdrop="static" data-keyboard="false"></button>
+    <button type="button" class="btn btn-primary hidden" data-toggle="modal" id="modalButton" data-target="#modalShow"
+        data-backdrop="static" data-keyboard="false"></button>
 
     <div class="content">
         <section class="common-box">
             <div class="container">
-                <div class="modal fade product-list-popup" id="modalShow" tabindex="-1" role="dialog" aria-hidden="false">
+                <div class="modal fade product-list-popup" id="modalShow" tabindex="-1" role="dialog"
+                    aria-hidden="false">
                     <div class="modal-dialog modal-dialog-centered" role="document">
                         <div class="modal-content">
                             <div class="modal-body">
@@ -49,7 +87,8 @@
                                             <div class="row div-content-center" id="menuScreen">
                                                 <div class="col-md-12 col-sm-12 text-center">
                                                     <a href="#" id="registerButton" class="btn btn-block">
-                                                        <img src="https://raw.githubusercontent.com/Ninepiaths/SecretPS1/refs/heads/main/images/regis_button.png" alt="Register" />
+                                                        <img src="https://raw.githubusercontent.com/Ninepiaths/SecretPS1/refs/heads/main/images/regis_button.png"
+                                                            alt="Register" />
                                                     </a>
                                                 </div>
                                                 <div class="col-md-12 col-sm-12">
@@ -64,22 +103,27 @@
 
                                             <div class="row div-content-center hidden" id="loginFormContainer">
                                                 <div class="col-md-12 col-sm-12">
-                                                    <form method="POST" action="/player/growid/login/validate" accept-charset="UTF-8" autocomplete="off">
+                                                    <form method="POST" action="/player/growid/login/validate"
+                                                        accept-charset="UTF-8" autocomplete="off">
                                                         <input name="_token" type="hidden" value="<%= _token %>" />
                                                         <input name="email" type="hidden" value="" />
                                                         <div class="form-group">
                                                             <input id="login-name" class="form-control grow-text"
-                                                                placeholder="Your RealityPS Name *" name="growId" type="text" />
+                                                                placeholder="Your RealityPS Name *" name="growId"
+                                                                type="text" />
                                                         </div>
                                                         <div class="form-group">
                                                             <input id="password" class="form-control grow-text"
-                                                                placeholder="Your RealityPS Password *" name="password" type="password" />
+                                                                placeholder="Your RealityPS Password *" name="password"
+                                                                type="password" />
                                                         </div>
                                                         <div class="form-group text-center">
-                                                            <input class="btn btn-lg btn-primary grow-button" type="submit" value="Login" />
+                                                            <input class="btn btn-lg btn-primary grow-button"
+                                                                type="submit" value="Login" />
                                                         </div>
                                                         <div class="form-group text-center">
-                                                            <a href="#" id="backToMenu1" class="btn btn-link text-light">Back</a>
+                                                            <a href="#" id="backToMenu1"
+                                                                class="btn btn-link text-light">Back</a>
                                                         </div>
                                                     </form>
                                                 </div>
@@ -87,15 +131,17 @@
 
                                             <div class="row div-content-center hidden" id="registerFormContainer">
                                                 <div class="col-md-12 col-sm-12">
-                                                    <form method="POST" action="/player/growid/login/validate" accept-charset="UTF-8">
+                                                    <form method="POST" action="/player/growid/login/validate"
+                                                        accept-charset="UTF-8">
                                                         <input name="_token" type="hidden" value="<%= _token %>" />
                                                         <input name="growId" type="hidden" value="" />
                                                         <input name="password" type="hidden" value="" />
                                                         <input name="email" type="hidden" value="guest@gmail.com" />
-                                                        <input class="btn btn-lg btn-primary grow-button"
-                                                            type="submit" value="Don't have any GrowID? Register here!" />
+                                                        <input class="btn btn-lg btn-primary grow-button" type="submit"
+                                                            value="Don't have any GrowID? Register here!" />
                                                         <div class="form-group text-center">
-                                                            <a href="#" id="backToMenu2" class="btn btn-link text-light">Back</a>
+                                                            <a href="#" id="backToMenu2"
+                                                                class="btn btn-link text-light">Back</a>
                                                         </div>
                                                     </form>
                                                 </div>
@@ -112,36 +158,39 @@
         </section>
     </div>
 
-<script src="https://s3.eu-west-1.amazonaws.com/cdn.growtopiagame.com/website/resources/assets/js/jquery-3.7.1.min.js"></script>
-<script src="https://s3.eu-west-1.amazonaws.com/cdn.growtopiagame.com/website/resources/assets/js/bootstrap3.min.js"></script>
+    <script
+        src="https://s3.eu-west-1.amazonaws.com/cdn.growtopiagame.com/website/resources/assets/js/jquery-3.7.1.min.js"></script>
+    <script
+        src="https://s3.eu-west-1.amazonaws.com/cdn.growtopiagame.com/website/resources/assets/js/bootstrap3.min.js"></script>
 
-<script>
-$(document).ready(function () {
-    $('#modalButton').trigger('click');
+    <script>
+        $(document).ready(function () {
+            $('#modalButton').trigger('click');
 
-    $('#registerButton').click(function (e) {
-        e.preventDefault();
-        $('#registerFormContainer form').submit();
-    });
+            $('#registerButton').click(function (e) {
+                e.preventDefault();
+                $('#registerFormContainer form').submit();
+            });
 
-    $('#loginButton').click(function (e) {
-        e.preventDefault();
-        $('#menuScreen').addClass('hidden');
-        $('#loginFormContainer').removeClass('hidden');
-    });
+            $('#loginButton').click(function (e) {
+                e.preventDefault();
+                $('#menuScreen').addClass('hidden');
+                $('#loginFormContainer').removeClass('hidden');
+            });
 
-    $('#backToMenu1, #backToMenu2').click(function (e) {
-        e.preventDefault();
-        $('#loginFormContainer, #registerFormContainer').addClass('hidden');
-        $('#menuScreen').removeClass('hidden');
-    });
+            $('#backToMenu1, #backToMenu2').click(function (e) {
+                e.preventDefault();
+                $('#loginFormContainer, #registerFormContainer').addClass('hidden');
+                $('#menuScreen').removeClass('hidden');
+            });
 
-    document.onkeydown = e => {
-        if (['F12', 'I', 'C', 'J', 'U'].includes(e.key) || e.keyCode == 123 || (e.ctrlKey && e.shiftKey)) {
-            e.preventDefault();
-        }
-    };
-});
-</script>
+            document.onkeydown = e => {
+                if (['F12', 'I', 'C', 'J', 'U'].includes(e.key) || e.keyCode == 123 || (e.ctrlKey && e.shiftKey)) {
+                    e.preventDefault();
+                }
+            };
+        });
+    </script>
 </body>
+
 </html>
